// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog dialogContainer-div 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div>
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog no shadow 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--gutters" show="true" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog persistent 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog show 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog witout close 1`] = `
<transition-stub name="fade" appear="true" persisted="false" css="true">
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters" show="true" role="document"></div>
      </div>
    </div>
  </div>
</transition-stub>
`;
